fix logo wrapping with h1 on homepage

--- a/assets/css/_header.css
+++ b/assets/css/_header.css
@@ -15,6 +15,10 @@
 .logo {
   margin: 1rem 0;
   
+  &::before {
+    content: none;
+  }
+  
   &__link {
     display: block;
     max-width: 477px;
